--- a/hello/src/render/demo-Clipboard/index.html
+++ b/hello/src/render/demo-Clipboard/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
     <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'">
-    <title>01_右键菜单</title>
+    <title>剪切板</title>
 </head>
 <body>
-<p>自定义右键菜单</p>
+    <button>设置剪切板内容</button>
+    <textarea></textarea>
 </body>
-<script src="./index.js"></script>
+<script src="./__node__.js"></script>
 </html>
