--- a/hello/src/render/demo-Dialog/index.html
+++ b/hello/src/render/demo-Dialog/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
     <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'">
-    <title>03_向父窗体传递信息</title>
+    <title>对话框</title>
 </head>
 <body>
-<textarea>Ha!Ha!Ha!Ha!Ha!Ha!</textarea>
-<button>提交</button>
+<a href="https://www.electronjs.org/docs/api/dialog">参考资料</a>
+<br>
+<ul id='test_events'></ul>
 </body>
-<script src="./index.js"></script>
+<script src="./__node__.js"></script>
 </html>
