--- a/hello/src/render/demo-OpenLocalBrowser/index.html
+++ b/hello/src/render/demo-OpenLocalBrowser/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
     <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'">
-    <title>05_剪切板</title>
+    <title>通过本地浏览器打开链接</title>
 </head>
 <body>
-    <button>设置剪切板内容</button>
-    <textarea></textarea>
+<p>通过本地浏览器打开链接</p>
+<a href="https://github.com/zhmhbest?tab=repositories">我的仓库</a>
 </body>
-<script src="./index.js"></script>
+<script src="./__node__.js"></script>
 </html>
