--- a/hello/src/render/demo-PostMessage/index.html
+++ b/hello/src/render/demo-PostMessage/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
     <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'">
-    <title>00_新窗体</title>
+    <title>向父窗体传递信息</title>
 </head>
 <body>
-<p>新窗体 Start!</p>
+<textarea>这是要发送的消息!</textarea>
+<button>提交</button>
 </body>
 <script src="./index.js"></script>
 </html>
