--- a/hello/src/main/static/index.html
+++ b/hello/src/main/static/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
     <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'">
-    <title>02_通过本地浏览器打开链接</title>
+    <title>HelloElectron</title>
 </head>
 <body>
-<p>通过本地浏览器打开链接</p>
-<a href="https://github.com/zhmhbest?tab=repositories">我的仓库</a>
+<ul id='test_events'></ul>
 </body>
-<script src="./index.js"></script>
+<script src="./__node__.js"></script>
 </html>
